Bug 223852 - Current image thumbnail is not selected when gwenview is launched from dolphin
Summary: Current image thumbnail is not selected when gwenview is launched from dolphin
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: FreeBSD Ports FreeBSD
: NOR grave
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
: 282360 309130 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-01-22 21:31 UTC by Yuri
Modified: 2012-11-21 16:29 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yuri 2010-01-22 21:31:43 UTC
Version:            (using KDE 4.3.4)
Installed from:    FreeBSD Ports

When I view the folder full of pictures in dolphin and I click on one of them, gwenview opens with this image open. But thumbnails in the bottom are positioned at the first few images in the whole folder, not at the current one.
Comment 1 Jekyll Wu 2011-12-09 21:34:45 UTC
Still reproducible when using KDE SC 4.8 beta2. It happens only when the thumbnail bar is already enabled when gwenview is opened. If thumbnail bar is disabled at first and enabled after opening the picture, the reported problem does not happen.
Comment 2 Jekyll Wu 2011-12-15 01:00:50 UTC
*** Bug 282360 has been marked as a duplicate of this bug. ***
Comment 3 Yuri 2012-05-26 15:32:40 UTC
gwenview-2.8.3 (that came with kde-4.8.3) still has this problem.

changing importance to major, since this is a very user visible issue and there has been no motion of this PR for 2.5 years. Is this project still maintained?
Comment 4 Benni Hill 2012-11-04 17:49:55 UTC
In ViewMainPagePrivate::setCurrentView
QModelIndex index = indexForView(view);
returns an invalid index. But then I'm stuck.
Comment 5 Benni Hill 2012-11-04 20:41:12 UTC
I think I found a solution:
https://git.reviewboard.kde.org/r/107201/
Comment 7 Jekyll Wu 2012-11-10 00:47:50 UTC
*** Bug 309130 has been marked as a duplicate of this bug. ***
Comment 8 Jekyll Wu 2012-11-10 01:12:57 UTC
@Benni Hill , you have a developer account but no permission to close bug ?  That makes the "BUG: 223852" hook useless ...  Maybe you should ask sysadmin or check whether you are using the same email address .
Comment 9 Benni Hill 2012-11-21 16:29:27 UTC
@Jekyll Wu: Seems like I have no permissions to close bugs. I'll ask the sysadmins, thanks.