This patch tries to fix two similar issues:

1. Make sure ThumbnailBarView is scrolled to the right item when
   gwenview is started with an image as argument (Bugs 223852 and
   309130)

2. Make sure ThumbnailView is scrolled to the right item when
   switching from a folder to its parent. (Up till now this only
   worked when the folder that you were leaving had a scrollbar.)

REVIEW: 107201
BUG: 223852
BUG: 309130